fix overlapping issue

--- a/src/app/line-chart/line-chart.component.scss
+++ b/src/app/line-chart/line-chart.component.scss
@@ -73,6 +73,7 @@ div.tooltip {
   margin-top: -22px;
   position: relative;
   left: calc(2.5vw - 50px);
+  cursor: pointer;
 }
 
 .blurred {
